--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 ﻿{
   "name": "com.kindmen.uxios",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "displayName": "Uxios",
-  "description": "A port of the Axios HTTP client for Unity",
-  "unity": "2022.2",
-  "documentationUrl": "",
-  "changelogUrl": "",
-  "licensesUrl": "",
+  "description": "A Unity-native, Axios-inspired HTTP client for streamlined, typed, and extensible networking across platforms.",
+  "unity": "2022.3",
+  "documentationUrl": "https://github.com/kind-men/uxios/blob/main/README.md",
+  "changelogUrl": "https://github.com/kind-men/uxios/blob/main/CHANGELOG.md",
+  "licensesUrl": "https://github.com/kind-men/uxios/blob/main/LICENSE",
   "keywords": [
   ],
   "author": {
