Added a query string encoder/decoder because Unity WebGL apps cannot use regular C# tooling; and moved tests around to match Unity's standards

--- a/Tests/Runtime/com.kind-men.uxios.tests.asmdef
+++ b/Tests/Runtime/com.kind-men.uxios.tests.asmdef
@@ -1,10 +1,10 @@
 {
-    "name": "PlayModeTests",
+    "name": "com.kind-men.uxios.tests",
     "rootNamespace": "KindMen.Uxios.Tests",
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "com.kindmen.uxios"
+        "com.kind-men.uxios"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
