--- a/Runtime/Scripts/com.kind-men.uxios.asmdef
+++ b/Runtime/Scripts/com.kind-men.uxios.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "com.kindmen.uxios",
+    "name": "com.kind-men.uxios",
     "rootNamespace": "KindMen.Uxios",
     "references": [],
     "includePlatforms": [],
