Add some more convenience methods in preparation for the PokeApi test suite with examples; and added documentation for the Resource class and a bit on promises

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,9 @@
 nav:
   - 'index.md'
-#  - 'Guides':
-#      - 'guides/quickstart.md'
-#  - 'Explanation':
+  - 'Guides':
+      - 'guides/fetching-pokemon.md' 
+  - 'Explanation':
+      - 'explanation/promises.md'
 #    - 'Overview': 'docs/explanation/core-concepts.md'
 #  - 'Reference':
 #      - 'reference/index.md'
