Add guide to demonstrate how to add an automatic loader and remobve superfluous samples files leftover from moving files

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ nav:
   - 'Guides':
       - 'guides/fetching-pokemon.md' 
       - 'guides/fetching-untyped-json-responses.md' 
+      - 'guides/building-an-automatic-loader.md' 
   - 'Explanation':
       - 'explanation/promises.md'
 #    - 'Overview': 'docs/explanation/core-concepts.md'
