--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
     - 'Explanation':
         - 'explanation/promises.md'
     - 'Reference':
+        - 'reference/request.md'
         - 'reference/response.md'
 
 # Includes, starting with an underscore - https://www.mkdocs.org/user-guide/configuration/#not_in_nav
