--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.kind-men.uxios",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "displayName": "Uxios",
   "description": "A Unity-native, Axios-inspired HTTP client for streamlined, typed, and extensible networking across platforms.",
   "unity": "2022.3",
@@ -9,7 +9,7 @@
   "licensesUrl": "https://github.com/kind-men/uxios/blob/main/LICENSE",
   "keywords": ["httpclient", "axios", "kindmen", "unitypackage", "junison"],
   "author": {
-    "name": "Mike van Riel",
+    "name": "Kind Men",
     "email": "mike@kind-men.com",
     "url": "https://www.kind-men.com"
   },
