Add documentation on URI Templates and update features page, including buttons linking to where you can find more about a certain feature

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
         - 'guides/fetching-pokemon.md' 
         - 'guides/fetching-pokemon-using-get.md' 
         - 'guides/fetching-untyped-json-responses.md' 
+        - 'guides/uri-templates.md' 
         - 'guides/logging-to-the-console.md' 
         - 'guides/building-an-automatic-loader.md' 
     - 'Explanation':
