Add reference guide for the config object, and improve other pages with more linking

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,7 @@ nav:
         - 'explanation/promises.md'
         - 'explanation/interceptors.md'
     - 'Reference':
+        - 'reference/config.md'
         - 'reference/request.md'
         - 'reference/response.md'
 
