--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,13 +8,19 @@ nav:
   - 'Documentation':
     - 'getting-started.md'
     - 'Guides':
+        - "guides/index.md"
         - 'guides/fetching-pokemon.md' 
         - 'guides/fetching-pokemon-using-get.md' 
         - 'guides/fetching-untyped-json-responses.md' 
         - 'guides/uri-templates.md' 
         - 'guides/cancellation.md' 
         - 'guides/logging-to-the-console.md' 
-        - 'guides/building-an-automatic-loader.md' 
+        - 'guides/building-an-automatic-loader.md'
+    - 'Bytesized':
+      - "guides/bytesized/index.md"
+      - "Resource":
+          - "guides/bytesized/resource/fetching.md"
+          - "guides/bytesized/resource/authentication.md"
     - 'Explanation':
         - 'explanation/promises.md'
         - 'explanation/interceptors.md'
@@ -22,6 +28,7 @@ nav:
         - 'reference/config.md'
         - 'reference/request.md'
         - 'reference/response.md'
+        - 'reference/error.md'
 
 # Includes, starting with an underscore - https://www.mkdocs.org/user-guide/configuration/#not_in_nav
 not_in_nav: |
